# metabotk

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE.md  README.md  TODO.txt  cli.py  cli_2.py  metabolomics_toolkit.py  pyproject.toml
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: api.rst  cli.rst  conf.py  dataset_manager.rst  imputation.rst  (+7 more)
metabotk/: __init__.py  cli.py  dataset_io.py  dataset_manager.py  dataset_manipulator.py  dataset_operations.py  dataset_processor.py  feature_selection.py  imputation.py  interface.py  main.py  metabolomic_dataset.py  missing_handler.py  models_handler.py  parse_and_setup.py  providers_handler.py  statistics_handler.py  utils.py  visualization_handler.py
src/: OLD_initiate.py  classes.py  cli.py  dataset_manager.py  dimensionality_reduction.py  effects_models.py  feature_selection.py  initiate.py  manager.py  metabolomics_toolkit.py  metabotk.py  missing.py  missing_handler.py  models.py  models_handler.py  outliers.py  outliers_handler.py  providers.py  providers_handler.py  reader.py  statistics.py  statistics_handler.py  utils.py  visualization.py  visualization_handler.py
tests/: test_dataset_editor.py  test_dataset_operations.py  test_imputation.py  test_interface.py  test_main.py  test_metabolomic_dataset.py  test_metabotk.py  test_metabotk_2.py  test_missing.py  test_outliers.py  test_parse_and_setup.py  test_providers.py  test_reader.py  test_statistics.py  test_utils.py
(+22 files in other folders)
