[tool.poetry]
name = "metabolomics-toolkit"
version = "0.1.0"
description = "Python toolkit for working with metabolomics data"
authors = ["matteobolner <matteo.bolner2@unibo.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
